--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
         <input type="text" name="book[id]" id="book-id" placeholder="ID of Book">
         <input type="Submit" value="Find Book(s)">
       </form>
+      <br>
+      <p>Content Output:</p>
+      <p id="output-text">Nothing Yet</p>
+      <br>
     </body>
 </html>
