--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <input type="Submit" value="Find Book(s)">
       </form>
       <br>
-      
+
       <h5>Create a Book:</h5>
       <form action = '#' id="book-create">
         <input type = "text" name="book[title]" placeholder="Title of book">
@@ -41,7 +41,7 @@
       </form>
 
       <br>
-      <h5 id="output-title">Content</h5>
+      <h5 id="output-title">Content:</h5>
       <table id=result-table class="table table-bordered">
         <tr>
           <td>ID</td>
