--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
         <input type="text" name="book[author]" placeholder="Author of book">
         <input type="submit" value="Add Book">
       </form>
+      <br>
+
+      <h5>Delete a Book:</h5>
+      <h1>DANGER ZONE</h1>
+      <form action = '#' id="book-delete">
+        <input type = "text" name="book[id]" id="book-delete-id" placeholder="Book ID">
+        <input type="submit" value="DELETE">
+      </form>
 
       <br>
       <h5 id="output-title">Content:</h5>
