--- a/index.html
+++ b/index.html
@@ -52,15 +52,13 @@
       <h5 id="output-title">Content:</h5>
       <table id=result-table class="table table-bordered">
         <tr>
-          <td>ID</td>
+          <th>ID</th>
+          <th>Title</th>
+          <th>Author</th>
+        </tr>
+        <tr>
           <td id="book-id-number"></td>
-        </tr>
-        <tr>
-          <td>Title</td>
           <td id="book-title"></td>
-        </tr>
-        <tr>
-          <td>Author</td>
           <td id="book-author"></td>
         </tr>
       </table>
